syntax = "proto3";

package user;

option java_package = "io.pedroagrs.server.proto.user";
option java_multiple_files = true;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ListUser(ListUserRequest) returns (stream ListUserResponse) {}
}

message User {
  string id = 1;
  string name = 2;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string userId = 1;
}

message DeleteUserResponse {
  string userId = 1;
}

message ListUserRequest {

}

message ListUserResponse {
  User user = 1;
}